Add 5G subscriber script

--- a/k8s-4g-core/templates/hss-database/mongo-imsi-configmap.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-imsi-configmap.yaml
@@ -16,4 +16,9 @@ data:
      {"imsi":"001010123456782","pdn":[{"apn":"internet","pcc_rule":[],"qos":{"qci":9,"arp":{"priority_level":8,"pre_emption_vulnerability":1,"pre_emption_capability":1}},"type":2}],"ambr":{"downlink":{"$numberLong":"1024000"},"uplink":{"$numberLong":"1024000"}},"subscribed_rau_tau_timer":12,"network_access_mode":2,"subscriber_status":0,"access_restriction_data":32,"security":{"k":"00112233445566778899aabbccddeeff","amf":"8000","op":null,"opc":"63BFA50EE6523365FF14C1F45F88737D"}}
     ]
 
+  imsi_5g.json: |
+    [
+     { "imsi" : "001010123456780", "subscribed_rau_tau_timer" : 12, "network_access_mode" : 0, "subscriber_status" : 0, "access_restriction_data" : 32, "slice" : [ { "sst" : 1, "default_indicator" : true, "session" : [ { "name" : "internet", "type" : 3, "pcc_rule" : [ ], "ambr" : { "uplink" : { "value" : 1, "unit" : 3 }, "downlink" : { "value" : 1, "unit" : 3 } }, "qos" : { "index" : 9, "arp" : { "priority_level" : 8, "pre_emption_capability" : 1, "pre_emption_vulnerability" : 1 } } } ] } ], "ambr" : { "uplink" : { "value" : 1, "unit" : 3 }, "downlink" : { "value" : 1, "unit" : 3 } }, "security" : { "k" : "00112233445566778899aabbccddeeff", "amf" : "8000", "op" : null, "opc" : "63BFA50EE6523365FF14C1F45F88737D" }, "imeisv" : "0010101234567853", "msisdn" : [ ], "schema_version" : 1, "__v" : 0 }
+    ]
+
   {{ end }}
